// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/jobs/table add custom class 1`] = `
<div
  className="job-table__panel job-table__data-retention"
>
  <div
    className="job-table__create-button"
  >
    <div>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Run Compliance Export Job Now"
          id="admin.complianceExport.createJob.title"
        />
      </button>
    </div>
    <div
      className="help-text"
    >
      <FormattedMessage
        defaultMessage="Initiates a Compliance Export job immediately."
        id="admin.complianceExport.createJob.help"
      />
    </div>
  </div>
  <div
    className="job-table__table"
  >
    <table
      className="table"
      data-testid="jobTable"
    >
      <thead>
        <tr>
          <th
            width="30px"
          />
          <th>
            <FormattedMessage
              defaultMessage="Status"
              id="admin.jobTable.headerStatus"
            />
          </th>
          <th>
            <FormattedMessage
              defaultMessage="Finish Time"
              id="admin.jobTable.headerFinishAt"
            />
          </th>
          <th>
            <FormattedMessage
              defaultMessage="Run Time"
              id="admin.jobTable.headerRunTime"
            />
          </th>
          <th
            colSpan="3"
          >
            <FormattedMessage
              defaultMessage="Details"
              id="admin.jobTable.headerExtraInfo"
            />
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1231"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-success"
              title="Job ID: 1231"
            >
              <FormattedMessage
                defaultMessage="Success"
                id="admin.jobTable.statusSuccess"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1232"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          >
            <span
              className="job-table__cancel-button"
              data-job-id="1232"
              onClick={[Function]}
              title="Cancel"
            >
              ×
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1232"
            >
              <FormattedMessage
                defaultMessage="Pending"
                id="admin.jobTable.statusPending"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1233"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          >
            <span
              className="job-table__cancel-button"
              data-job-id="1233"
              onClick={[Function]}
              title="Cancel"
            >
              ×
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1233"
            >
              <FormattedMessage
                defaultMessage="In Progress"
                id="admin.jobTable.statusInProgress"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1234"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1234"
            >
              <FormattedMessage
                defaultMessage="Canceling..."
                id="admin.jobTable.statusCanceling"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1235"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-error"
              title="Job ID: 1235"
            >
              <FormattedMessage
                defaultMessage="Canceled"
                id="admin.jobTable.statusCanceled"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1236"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-error"
              title="Job ID: 1236"
            >
              <FormattedMessage
                defaultMessage="Error"
                id="admin.jobTable.statusError"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1236"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1236"
            >
              <FormattedMessage
                defaultMessage="Warning"
                id="admin.jobTable.statusWarning"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`components/admin_console/jobs/table hide create job button 1`] = `
<div
  className="job-table__panel"
>
  <div
    className="job-table__create-button"
  >
    <div
      className="help-text"
    >
      <FormattedMessage
        defaultMessage="Initiates a Compliance Export job immediately."
        id="admin.complianceExport.createJob.help"
      />
    </div>
  </div>
  <div
    className="job-table__table"
  >
    <table
      className="table"
      data-testid="jobTable"
    >
      <thead>
        <tr>
          <th
            width="30px"
          />
          <th>
            <FormattedMessage
              defaultMessage="Status"
              id="admin.jobTable.headerStatus"
            />
          </th>
          <th>
            <FormattedMessage
              defaultMessage="Finish Time"
              id="admin.jobTable.headerFinishAt"
            />
          </th>
          <th>
            <FormattedMessage
              defaultMessage="Run Time"
              id="admin.jobTable.headerRunTime"
            />
          </th>
          <th
            colSpan="3"
          >
            <FormattedMessage
              defaultMessage="Details"
              id="admin.jobTable.headerExtraInfo"
            />
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1231"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-success"
              title="Job ID: 1231"
            >
              <FormattedMessage
                defaultMessage="Success"
                id="admin.jobTable.statusSuccess"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1232"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          >
            <span
              className="job-table__cancel-button"
              data-job-id="1232"
              onClick={[Function]}
              title="Cancel"
            >
              ×
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1232"
            >
              <FormattedMessage
                defaultMessage="Pending"
                id="admin.jobTable.statusPending"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1233"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          >
            <span
              className="job-table__cancel-button"
              data-job-id="1233"
              onClick={[Function]}
              title="Cancel"
            >
              ×
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1233"
            >
              <FormattedMessage
                defaultMessage="In Progress"
                id="admin.jobTable.statusInProgress"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1234"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1234"
            >
              <FormattedMessage
                defaultMessage="Canceling..."
                id="admin.jobTable.statusCanceling"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1235"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-error"
              title="Job ID: 1235"
            >
              <FormattedMessage
                defaultMessage="Canceled"
                id="admin.jobTable.statusCanceled"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              --
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1236"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-error"
              title="Job ID: 1236"
            >
              <FormattedMessage
                defaultMessage="Error"
                id="admin.jobTable.statusError"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
        <tr
          key="1236"
        >
          <td
            className="whitespace--nowrap text-center"
            width="30px"
          />
          <td
            className="whitespace--nowrap"
          >
            <span
              className="status-icon-warning"
              title="Job ID: 1236"
            >
              <FormattedMessage
                defaultMessage="Warning"
                id="admin.jobTable.statusWarning"
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
            >
              <FormattedDate
                day="2-digit"
                month="short"
                value={2018-10-29T17:31:34.674Z}
                year="numeric"
              />
               - 
              <FormattedTime
                hour="2-digit"
                minute="2-digit"
                value={2018-10-29T17:31:34.674Z}
              />
            </span>
          </td>
          <td
            className="whitespace--nowrap"
          >
            <span
              className="whitespace--nowrap"
              title="Last Activity: Oct 29, 2018 - 5:31:34 PM"
            >
              NaN minutes
            </span>
          </td>
          <td>
            <span />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
